--- a/01-html/02-images.html
+++ b/01-html/02-images.html
@@ -3,12 +3,28 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Exercise 02 - Images</title>
+    <title>Exercise 02- Images</title>
   </head>
   <body>
     <main>
       <!-- Add your code here -->
+      <figure>
+        <img
+          src="http://placekitten.com/g/200x150"
+          alt="Image of a kitten"
+          width="200"
+          height="150"
+        />
+        <figcaption>Kittens Rule!</figcaption>
+
+        <img
+          src="http://place-puppy.com/200x150"
+          alt="Image of a puppy"
+          width="200"
+          height="150"
+        />
+        <figcaption>Puppies Rule!</figcaption>
+      </figure>
     </main>
   </body>
 </html>
