--- a/01-html/04-form.html
+++ b/01-html/04-form.html
@@ -3,13 +3,59 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Exercise 04 - Form</title>
+    <title>Exercise 04- Form</title>
   </head>
   <body>
     <main>
+      <h1>Form</h1>
       <form action="/submit">
-        <!-- Add your code here -->
+        <!--div is a block element-->
+        <div>
+          <label for="username">Name:</label>
+          <input
+            type="text"
+            name="username"
+            id="username"
+            placeholder="Full name"
+          />
+        </div>
+
+        <div>
+          <label for="Email">Email:</label>
+          <input
+            type="text"
+            name="Email"
+            id="Email"
+            placeholder="name@pdx.edu"
+          />
+        </div>
+
+        <br />
+        <fieldset>
+          <legend>Favorite Character</legend>
+          <input type="radio" name="character" id="Spongebob" />
+          <label for="Spongebob">Spongebob</label>
+          <br />
+          <input type="radio" name="character" id="Sandy" />
+          <label for="Spongebob">Sandy</label>
+          <br />
+          <input type="radio" name="character" id="Patrick" />
+          <label for="Spongebob">Patrick</label>
+        </fieldset>
+        <br />
+        <fieldset>
+          <legend>Are you a fan of the show?</legend>
+          <input type="checkbox" name="episodes" id="option1" />
+          <label for="option1">Yes, I have watched all episodes</label>
+          <br />
+          <input type="checkbox" name="memes" id="option2" />
+          <label for="option2">Yes, it's got the best memes</label>
+        </fieldset>
+        <br />
+        <div>
+          <input type="submit" value="Submit" />
+          <input type="reset" value="Reset" />
+        </div>
       </form>
     </main>
   </body>
