--- a/03-css/06-media-queries.html
+++ b/03-css/06-media-queries.html
@@ -7,6 +7,7 @@
     <title>Exercise 06 - Media Queries</title>
     <link rel="stylesheet" href="../_styles/styles.css" />
     <link rel="stylesheet" href="06-media-queries.css" />
+    <link rel="stylesheet" href="../06-media-queries.css" />
   </head>
   <body>
     <header>
@@ -15,6 +16,7 @@
           <li><a href="#">home</a></li>
           <li><a href="#">parmesan</a></li>
           <li><a href="#">manchego</a></li>
+          <li><a href="#">cheddar</a></li>
         </ul>
       </nav>
     </header>
@@ -26,7 +28,12 @@
           airedale bavarian bergkase jarlsberg bocconcini cottage cheese cheese
           and wine. Dolcelatte fromage frais goat hard cheese the big cheese
           bocconcini cheese strings macaroni cheese. Cottage cheese goat cow
-          feta red leicester cream cheese brie.
+          feta red leicester cream cheese brie. Boursin cheese and biscuits
+          fondue. St. agur blue cheese manchego airedale bavarian bergkase
+          jarlsberg bocconcini cottage cheese cheese and wine. Dolcelatte
+          fromage frais goat hard cheese the big cheese bocconcini cheese
+          strings macaroni cheese. Cottage cheese goat cow feta red leicester
+          cream cheese brie.
         </p>
       </section>
       <section id="manchego">
@@ -36,7 +43,28 @@
           airedale bavarian bergkase jarlsberg bocconcini cottage cheese cheese
           and wine. Dolcelatte fromage frais goat hard cheese the big cheese
           bocconcini cheese strings macaroni cheese. Cottage cheese goat cow
-          feta red leicester cream cheese brie.
+          feta red leicester cream cheese brie.Boursin cheese and biscuits
+          fondue. St. agur blue cheese manchego airedale bavarian bergkase
+          jarlsberg bocconcini cottage cheese cheese and wine. Dolcelatte
+          fromage frais goat hard cheese the big cheese bocconcini cheese
+          strings macaroni cheese. Cottage cheese goat cow feta red leicester
+          cream cheese brie.
+        </p>
+      </section>
+
+      <section id="cheddar">
+        <h3>cheddar</h3>
+        <p>
+          Boursin cheese and biscuits fondue. St. agur blue cheese manchego
+          airedale bavarian bergkase jarlsberg bocconcini cottage cheese cheese
+          and wine. Dolcelatte fromage frais goat hard cheese the big cheese
+          bocconcini cheese strings macaroni cheese. Cottage cheese goat cow
+          feta red leicester cream cheese brie. Boursin cheese and biscuits
+          fondue. St. agur blue cheese manchego airedale bavarian bergkase
+          jarlsberg bocconcini cottage cheese cheese and wine. Dolcelatte
+          fromage frais goat hard cheese the big cheese bocconcini cheese
+          strings macaroni cheese. Cottage cheese goat cow feta red leicester
+          cream cheese brie.
         </p>
       </section>
     </section>
