--- a/05-css-grid/01-grid.html
+++ b/05-css-grid/01-grid.html
@@ -6,6 +6,7 @@
     <title>Exercise 01 - CSS Grid</title>
     <link rel="stylesheet" href="../_styles/styles.css" />
     <link rel="stylesheet" href="01-grid.css" />
+    <link rel="stylesheet" href="styles1.css" />
   </head>
   <body>
     <main>
