--- a/05-css-grid/02-grid-areas.html
+++ b/05-css-grid/02-grid-areas.html
@@ -6,6 +6,7 @@
     <title>Exercise 02 - CSS Grid Areas</title>
     <link rel="stylesheet" href="../_styles/styles.css" />
     <link rel="stylesheet" href="02-grid-areas.css" />
+    <link rel="stylesheet" href="styles1.css" />
   </head>
   <body>
     <main class="grid-container">
