--- a/06-bootstrap/01-cards.html
+++ b/06-bootstrap/01-cards.html
@@ -7,12 +7,75 @@
     <title>Exercise 01 - Cards</title>
     <link
       rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" />
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
+    />
     <link rel="stylesheet" href="../_styles/styles.css" />
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
-    <h1>01 - Cards</h1>
-    <!-- Add your code here -->
+    <main class="container mt-5">
+      <h1 class="mb-4">01 - Cards</h1>
+      <!-- Add your code here -->
+      <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+        <a class="navbar-brand" href="#">Navbar</a>
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-toggle="collapse"
+          data-target="#navbarNavAltMarkup"
+          aria-controls="navbarNavAltMarkup"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+          <div class="navbar-nav">
+            <a class="nav-item nav-link active" href="#">Home </a>
+            <a class="nav-item nav-link" href="#">Features</a>
+            <a class="nav-item nav-link" href="#">Pricing</a>
+          </div>
+        </div>
+      </nav>
+
+      <div class="card d-inline-block w-25">
+        <div class="card-header">Features</div>
+        <div class="box bg-secondary"></div>
+        <img src="..." class="card-img-top" alt="..." />
+        <div class="card-body">
+          <h5 class="card-title">Special Title Treatment</h5>
+          <p class="card-text">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero hic
+            voluptatem, soluta corrupti tempora ipsum eligendi esse numquam.
+            Necessitatibus, unde corrupti. Delectus animi beatae quos
+            exercitationem ab? Facere, illum itaque!
+          </p>
+          <button class="btn btn-primary">Click me</button>
+        </div>
+        <div class="card-footer">
+          <small class="text-muted">Last updated 3 minutes ago</small>
+        </div>
+      </div>
+
+      <!--Second card-->
+      <div class="card d-inline-block w-25">
+        <div class="card-header">Features</div>
+        <div class="box bg-secondary"></div>
+        <img src="..." class="card-img-top" alt="..." />
+        <div class="card-body">
+          <h5 class="card-title">Special Title Treatment</h5>
+          <p class="card-text">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero hic
+            voluptatem, soluta corrupti tempora ipsum eligendi esse numquam.
+            Necessitatibus, unde corrupti. Delectus animi beatae quos
+            exercitationem ab? Facere, illum itaque!
+          </p>
+          <button class="btn btn-primary">Click me</button>
+        </div>
+        <div class="card-footer">
+          <small class="text-muted">Last updated 3 minutes ago</small>
+        </div>
+      </div>
+    </main>
   </body>
 </html>
